Added some basic tooltips to main window

--- a/SeatingHelper/SeatingHelper.csproj
+++ b/SeatingHelper/SeatingHelper.csproj
@@ -13,10 +13,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\Info-Button.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EPPlus" Version="8.2.1" />
     <PackageReference Include="Extended.Wpf.Toolkit" Version="5.0.0" />
     <PackageReference Include="gong-wpf-dragdrop" Version="4.0.0" />
     <PackageReference Include="MaterialDesignThemes" Version="5.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\Info-Button.png" />
   </ItemGroup>
 
 </Project>
