--- a/SeatingHelper/SeatingHelper.csproj
+++ b/SeatingHelper/SeatingHelper.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <None Remove="Images\Info-Button.png" />
+    <None Remove="Templates\SeatingTemplate.xlsx" />
+    <None Remove="Templates\SeatingTemplateWithScoreOrder.xlsx" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +27,8 @@
 
   <ItemGroup>
     <Resource Include="Images\Info-Button.png" />
+    <Resource Include="Templates\SeatingTemplate.xlsx" />
+    <Resource Include="Templates\SeatingTemplateWithScoreOrder.xlsx" />
   </ItemGroup>
 
 </Project>
